# program-learning

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Session.vim  TODO  todo.txt
.todo/: done.txt  todo.txt  todo.txt.bak
.undodir/: %home%misaka18931%proj%program-learning%CodeForces%CF1354D.cpp  %home%misaka18931%proj%program-learning%luogu%Luogu3452.cpp
CodeForces/: CF1354D.cpp  CF1360G.cpp  CF1428E.cpp  CF1436D.cpp  CF1437E.cpp  CF1444B.cpp  CF1446C.cpp  CF380C.cpp  CF633F.cpp  CF708C.cpp
Codeforces/: CF1360G.cpp  CF1436D.cpp  CF1439C.cpp  CF1444C.cpp  CF323C.cpp  CF484B.cpp  CF600E.cpp  CF633F.cpp
LibreOJ/: 132.cpp  133.cpp  134.cpp  135.cpp
custom/: 210307_01.cpp
helper/: bigint.cpp  bigint.hpp
loj/: 10091_popular_cows.cpp  101-maxium_flow.cpp  135-bit_2d_range.cpp  139-hld.cpp  139.cpp  2124-haoi2015_die_on_tree.cpp  2130-noi2015_pkg.cpp
luogu/: Luogu1004  Luogu1004.cpp  Luogu1005.cpp  Luogu1006.cpp  Luogu1009.cpp  Luogu1015.cpp  Luogu1018.cpp  Luogu1022.cpp  Luogu1037.cpp  Luogu1038  Luogu1038.cpp  Luogu1058.cpp  Luogu1081.cpp  Luogu1083.cpp  Luogu1104.cpp  Luogu1121.cpp  Luogu1169_dp.cpp  Luogu1272.cpp  Luogu1382.cpp  Luogu1397.cpp  Luogu1438.cpp  Luogu1471.cpp  Luogu1502.cpp  Luogu1525.cpp  Luogu1642.cpp  Luogu1654.cpp  Luogu1726.cpp  Luogu1937.cpp  Luogu2146.cpp  Luogu2221.cpp  Luogu2239.cpp  Luogu2495.cpp  Luogu2568_seive.cpp  Luogu2746.cpp  Luogu2831  Luogu2831.cpp  Luogu3177.cpp  Luogu3205.cpp  Luogu3373.cpp  Luogu3376.cpp  (+33 more)
notes/: 20210311.md  content.md  dp.md  mono_queue.md  number_theory.md  segment_tree.md  skills.md
poj/: 2104.cpp
(+191 files in other folders)
