cmake_minimum_required(VERSION 3.17)
project(program_learning)

set(CMAKE_CXX_STANDARD 11)
add_executable(LuoguT150637 luogu/LuoguT150637.cpp)
add_executable(CF633F CodeForces/CF633F.cpp)
add_executable(Luogu5774 luogu/Luogu5774.cpp)
add_executable(Luogu1654 luogu/Luogu1654.cpp)
add_executable(Luogu4342 luogu/Luogu4342.cpp)